--- a/environment.yml
+++ b/environment.yml
@@ -1,26 +1,28 @@
-name: vistiq
+name: vistiq-env
 channels:
   - conda-forge
+  - nvidia
+  - pytorch
   - defaults
 dependencies:
-  - dask-core=2022.3.0
-  - ffmpeg=4.3.1
-  - graphviz=2.48.0
-  - matplotlib=3.4.2
-  - numpy=1.21.0
-  - opencv=4.5.2
-  - pandas=1.3.1
-  - pip
-  - prefect=1.1.0
-  - python=3.9.6
-  - python-graphviz=0.19.1
-  - seaborn=0.11.2
-  - scipy=1.10.0
+  - python=3.12
+  - pytorch-gpu=2.7.1
+  - micro_sam=1.6.2
+
   - pip:
-    - nd2reader==3.3.0
-    - networkx==2.5.1
-    - scikit-image==0.18.2
-    - tifffile==2021.7.2
-    - tiffile==2018.10.18
-
-
+    - bioio>=3.0.0
+    - bioio-lif>=1.4.1
+    - bioio-tifffile>=1.3.0
+    - bioio-nd2>=1.5.0
+    - dask-core>=2022.3.0
+    - dask-image>=0.10.0
+    - napari>=0.6.6
+    - napari-animation>=0.0.9
+    - opencv-python-headless>=4.12.0
+    - pydantic>=2.10.0
+    - stackview>=0.18.0
+    - scikit-image>=0.18.2
+    - scipy>=1.10
+    - numpy>=1.21.0
+    - pandas>=1.3.1
+    - prefect>=3.0.0
