--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,13 +4,16 @@ dynamic = ["version"]
 dependencies = [
     "numpy",
     "opencv-python-headless",
+    "pydantic",
     "scikit-image",
     "scipy",
-    "torch",
+    "torch>=2.7",
     "torchvision",
     "trackastra<0.4",
     "tifffile",
     "prefect>=3.0.0",
+    "bioio>=3.0.0",
+    "bioio-ome-tiff>=1.4.0",
 ]
 requires-python = ">=3.12"
 description = "Turn complex imaging data into actionable, quantitative insight with modular, multi-step analysis."
