chmod shell scripts, fixed relative path handling in FileList

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,12 +4,15 @@ dynamic = ["version"]
 dependencies = [
     "numpy",
     "opencv-python-headless",
+    "joblib",
+    "pandas",
     "pydantic",
     "scikit-image",
     "scipy",
     "torch>=2.7",
     "torchvision",
     "trackastra<0.4",
+    "torch-em",
     "tifffile",
     "typer",
     "prefect>=3.0.0",
